# app.py
@@ -1,4 +1,4 @@
-from flask import Flask, jsonify
+from flask import Flask, jsonify, request
 from flask_restful import Resource, Api
 from flask_swagger_ui import get_swaggerui_blueprint
 import json
@@ -10,32 +10,44 @@ from apscheduler.schedulers.background import BackgroundScheduler
 import random 
 
 # Load database
-db = TinyDB('./prices_db.json')
-# Clear db
+db = TinyDB('./db.json')
 db.truncate()
 Prices = Query()
-symbols =  [
+Accounts = Query()
+
+# insert test data...
+prices =  [
     {'symbol': 'EURUSD', 'price': 1.04},
     {'symbol': 'BTCUSD', 'price': 24000}
 ]
+accounts =  [
+    {'login': 'name1', 'password': "asd", 'enable': True, 'email': 'name1@gmail.com', 'balance': 100},
+    {'login': 'name2', 'password': "asd", 'enable': True, 'email': 'name2@gmail.com', 'balance': 1000},
+    {'login': 'name3', 'password': "asd", 'enable': False, 'email': 'name3@gmail.com', 'balance': 10000},
+]
+prices_table = db.table('prices')
+prices_table.truncate() # Clear old price data (for test purposes)
+accounts_table = db.table('accounts')
+accounts_table.truncate() # Clear old user data (for test purposes)
 
-db.insert_multiple(symbols)
+# Insert new data
+prices_table.insert_multiple(prices)
+accounts_table.insert_multiple(accounts)
 
-
-def readlines():
-    table = db.table('user')
+def update_prices():
+    prices_table = db.table('prices')
     eurusd = random.randint(104, 106) / 100
     btcusd = random.randint(24000, 30000)
-    db.update({'price': eurusd},Prices.symbol == 'EURUSD')
-    db.update({'price': btcusd},Prices.symbol == 'BTCUSD')
-
+    prices_table.update({'price': eurusd},Prices.symbol == 'EURUSD')
+    prices_table.update({'price': btcusd},Prices.symbol == 'BTCUSD')
 
 app = Flask(__name__)
 api = Api(app)
 
+# Update the prices every sec in the background.
 with app.app_context():
     scheduler = BackgroundScheduler()
-    scheduler.add_job(readlines, 'interval', seconds=1)
+    scheduler.add_job(update_prices, 'interval', seconds=1)
     scheduler.start()
 
 SECRET_KEY = os.environ.get('SECRET_KEY') or 'set secret message'
@@ -61,8 +73,6 @@ def swagger():
     with open('swagger.json', 'r') as f:
         return jsonify(json.load(f))
 
-
-
 if __name__ == '__main__':
     app.run(debug=True)
 
@@ -73,9 +83,7 @@ def get_version():
 
 @app.route("/oauth2/token")
 def get_oauth2token():
-    
     try:
-        # token should expire after 24 hrs
         token = jwt.encode(
             {"user_id": "manager_id"},
             app.config["SECRET_KEY"],
@@ -89,22 +97,53 @@ def get_oauth2token():
                 return {
                     "error": "Something went wrong",
                     "message": str(e)
-                }, 500    
+                }, 500
 
 @app.route("/symbols/",methods=['GET'])
 #@token_required
 def get_symbols():
-    print(request.args.get('symbol'))
-    btcusd = db.get(Prices.symbol == 'BTCUSD')
-    
-    #print(db.get(Prices.Symbol == 'EURUSD'))
-    return str(btcusd['price'])
+
+    return jsonify([
+         {
+            "symbol": "BTCUSD",
+            "description": "Bitcoin/usd symbol",
+         },
+         {
+            "symbol": "EURUSD",
+            "description": "Euro/usd symbol",
+         },
+    ])
+
+@app.route("/quotes/<string:symbol>/",methods=['GET'])
+#@token_required
+def get_quotes(symbol):
+    symbol = db.get(Prices.symbol == symbol)
+    return jsonify([
+         {
+            "symbol": symbol['symbol'],
+            "ask": symbol['price']*1.01, # ask price 1% more expensive.
+            "bid": symbol['price'],
+         },
+    ])
 
 
 @app.route("/accounts/",methods=['GET'])
-@token_required
+#@token_required
 def get_accounts():
-    print("asd")
+    accounts = db.table("accounts")
+    return jsonify(accounts.all())
+
+@app.route("/accounts/",methods=['POST'])
+#@token_required
+def post_accounts():
+    accounts = db.table("accounts")
+    account = request.json
+    print(account)
+    #accounts.insert(acount)
+    return jsonify({
+        "message": "successfully retrieved user profile",
+        "data": account
+    })
 
 
 @app.route("/users/", methods=["GET"])
